--- a/style/influencer.css
+++ b/style/influencer.css
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* color set using variable */
+:root{
+    --primaryColor: rgb(58, 58, 58);
+}
+
 body{
     font-family: "Poppins", sans-serif;
     max-width: 1366px;
@@ -16,6 +21,7 @@ body{
 #influencer{
     font-size: 24px;
     font-weight: 700;
+    color: var(--primaryColor)
 }
 .nav-content{
     display: flex;
@@ -35,6 +41,59 @@ body{
 .nav-items a{
     text-decoration: none;
     font-weight:600;
-    color: rgb(58, 58, 58);
+    color: var(--primaryColor);
+    
+}
+
+/* hero section related style */
+
+.hero-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.hero-title-content{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.hero-title{
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 70px;
+    color: var(--primaryColor)
+}
+
+.hero-description{
+    font-weight: 600;
+    color: var(--primaryColor);
+}
+
+.hero-btn{
+    background-color: rgb(224, 44, 109);
+    padding: 10px 24px;
+    border-radius: 40px;
+    font-weight: 700;
+    border: none;
+    color: white;
+}
+
+.hero-img-content{
+    display: flex;
+    /* justify-content:center;
+    align-items: center; */
+    background-image: url("..//images/Circle\ design.svg");
+    /* background-position: top left; */
+    
+}
+.hero-img-content div{
+    margin-top: 25px;
+}
+.hero-img-content img{
+    width: 100%;
     
 }
