--- a/style/influencer.css
+++ b/style/influencer.css
@@ -101,8 +101,18 @@ body{
     
 }
 
+/* Company name list */
+
+.company-name-content{
+    margin-top: 100px;
+    /* margin:  auto; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
 .divider{
-    margin-top: 50px;
+    margin-top: 30px;
     background: linear-gradient(135.00deg,
      rgba(192, 204, 218, 0.1) 0%,
      rgba(192, 204, 218, 0.6) 50.378%,
@@ -146,9 +156,69 @@ body{
   }
 
   .hero-img-content{
-    /* background-size:cover; */
+    background-size:cover;
   }
 
+/* company name list */
+.company-name-content{
+    gap: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+.company-name-content img{
+    width: 50px;
+    height: 15px;
+    
+}
+
+}
+
+/* Responsive for medium device */
+
+@media screen and (min-width:577px) and (max-width:768px){
+    .nav-content{
+        /* display: none; */
+        flex-direction: column;
+    }
+    .nav-items{
+        flex-direction: column;
+        margin-top: 30px;
+    }
+
+
+    .hero-content{
+        flex-direction: column-reverse;
+    
+    }
+  .hero-title-content{
+    width: 90%;
+    text-align: center;
+    margin-top: 50px;
+  }
+  .hero-title{
+    font-size: 28px;
+    line-height: 42px;
+  }
+  
+  .hero-description{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+  }
+
+/* company name list */
+.company-name-content{
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+.company-name-content img{
+    width: 80px;
+    height: 25px;
+    
+}
 
 
 }
