--- a/style/influencer.css
+++ b/style/influencer.css
@@ -236,6 +236,38 @@ body{
     margin-left: 10px;
 }
 
+/* footer section */
+footer{
+  background: rgb(10, 8, 38);
+  margin-top: 50px;
+}
+.footer-content{
+    color: white;
+    /* margin:  10px auto; */
+    text-align: center;
+    padding: 50px 0;  
+}
+
+.footer-title{
+    font-size: 24px;
+    font-weight: 700;
+}
+.footer-content p{
+    font-size: 14px;
+    font-weight: 700;
+    color: rgb(217, 219, 225);
+}
+
+.footer-social-media{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+
+
+
 /* Responsive related style */
 
 /* for small device */
@@ -299,9 +331,7 @@ body{
 .collection-price{
     font-weight: 700;
 }
-.collection-description{
-    /* font-weight: 400; */
-}
+
 
 /* Features product section */
 
@@ -328,8 +358,10 @@ body{
 /* Responsive for medium device */
 
 @media screen and (min-width:577px) and (max-width:768px){
-    body{
+   
+    main{
         width: 95%;
+        margin: auto;
     }
     .nav-content{
         /* display: none; */
@@ -421,9 +453,10 @@ body{
 
 /* responsive for 769 to 1365 */
 @media screen and (min-width:769px) and (max-width:1365px){
-    body{
+  
+    main, nav{
         width: 90%;
-
+        margin: auto;
     }
     .hero-title{
         font-size: 30px;
@@ -453,9 +486,3 @@ body{
   
 }
    
-
-     
-
-
-    
-}
